--- a/benzineprijs.jinja2
+++ b/benzineprijs.jinja2
@@ -1,4 +1,4 @@
-{% from 'opmaak.jinja' import komma %}
+{% from 'opmaak.jinja' import komma, benzineprijs%}
 
 {% set huidige_prijs = states('input_number.benzine_huidige_prijs') %}
 {% set huidige_prijs_datum_updated = states('sensor.benzine_datum') %}
@@ -7,7 +7,7 @@
 {% set hoogste_prijs_datum = states('input_text.benzine_hoogste_prijs_datum') %}
 {% set laagste_prijs = states('input_number.benzine_laagste_prijs') %}
 {% set laagste_prijs_datum = states('input_text.benzine_laagste_prijs_datum') %}
-{% set locatie = states('sensor.benzine_goedkoopste_locatie') | replace('Stad','<span style="color:#00ffaa;"><b>Stad</b></span>') %}
+{% set locatie = states('sensor.benzine_goedkoopste_locatie') | regex_replace('(.*)(Stad)','<span style="color:#00ffaa;"><b>\\1\\2</b></span>') %}
 
 {# Dit is nog een test #}
 {% set verschil = states('input_number.benzine_huidige_prijs_verschil') | float('-') | round(4) %}
@@ -28,20 +28,20 @@
 {% elif huidige_prijs == hoogste_prijs %}
 {% set kleur = '#ff0000' %}
 {% else %}
-{% set kleur = '#ffffff' %}
+{% set kleur = '' %}
 {% endif %}
 
-
 <div style="text-align:end">
-Laatste update: {{ huidige_prijs_datum_updated }}<br />
-Laatste wijziging: {{ huidige_prijs_datum_changed }}<br />
-Huidige laagste benzineprijs:<br /> <font color={{ kleur }}> <b>{{ komma(huidige_prijs) }}€</b></font> <font color={{ kleur_verschil }}><i>({{ plus }}{{ komma('{:.3f}'.format(verschil)) }}€)</i></font>{{ updown }}
+Laatste update: {{ huidige_prijs_datum_updated }}&nbsp;&nbsp;<br />
+Laatste wijziging: {{ huidige_prijs_datum_changed }}&nbsp;&nbsp;<br />
+Huidige laagste benzineprijs:<br />
+<font color={{ kleur }}> <b>{{ benzineprijs(huidige_prijs) }}</b></font> <font color={{ kleur_verschil }}><i>({{ plus }}{{ komma('{:.3f}'.format(verschil)) }}€)</i></font>{{ updown }}
 <br />
 Locatie:  {{ locatie }}
 <br />
-Max.: {{ komma(hoogste_prijs) }}€ ({{ hoogste_prijs_datum }})
+Max.: {{ benzineprijs(hoogste_prijs) }} ({{ hoogste_prijs_datum }})
 <br />
-Min.: {{ komma(laagste_prijs) }}€ ({{ laagste_prijs_datum }})
-</div>
+Min.: {{ benzineprijs(laagste_prijs) }} ({{ laagste_prijs_datum }})
+</span>
 
 <ha-icon icon='mdi:window-open-variant'/>
